--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
 <svg id="diagram" class="diagram" viewBox="0 0 900 260" preserveAspectRatio="xMidYMid meet" style="display:none"></svg>
 
 
-<footer class="small">Designed from your scanned textbook example — uses the same calculation approach.</footer>
+<!-- <footer class="small">Designed from your scanned textbook example — uses the same calculation approach.</footer> -->
 </main>
 <script src="java.js"></script>
 </body>
